fix: remove scrollbar-width on "hover: hover"

--- a/resources/skins.citizen.styles/common/scrollbar.less
+++ b/resources/skins.citizen.styles/common/scrollbar.less
@@ -2,11 +2,6 @@
 // Since the scrollbar will stay visible if styled
 // Besides scrollbar is subtle enough on touch devices
 @media ( hover: hover ) {
-	html,
-	body {
-		scrollbar-width: thin;
-	}
-
 	::-webkit-scrollbar-track {
 		background: transparent;
 		transition: @transition-background;
